add second project link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">   
 <head >
     <link rel="stylesheet" href="styles.css"></link> 
-    <title> Rachel OConnell</title>
+    <title> GetElementById.RachelsPortfolio</title>
 </head>
 
 <body>
@@ -41,9 +41,9 @@
     </div>
     <div class="projects-content">
         <p class="project">
-            [Project2]
+            Linage of Westeros
         </p>
-            <a href="" class="showOff">[insert image]</a>
+            <a href="https://rach0c0.github.io/Lineage-of-Westeros" class="showOff">[insert image]</a>
     </div>
 </div>
 </div>
