contact form added

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     <h3 class="more-title">
         Want more?
     </h3>
-    <a href="www.github.com/rach0c0" class="more"> github</a> 
-    <a href="www.linkedin.com/in/racheloco" class="more">resume</a>
+    <a href="www.github.com/rach0c0" class="more"> Github</a> 
+    <a href="www.linkedin.com/in/racheloco" class="more">LinkedIn</a>
+    <a href="/contact.html" class="contact">Message me</a>
 </div>
 </body>
 
