color palete established

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     </div>
 </div>
 </div>
+</body>
 
+<footer>
 <div class="more-container">
     <h3 class="more-title">
         Want more?
@@ -56,6 +58,6 @@
     <a href="www.linkedin.com/in/racheloco" class="more">LinkedIn</a>
     <a href="/contact.html" class="contact">Message me</a>
 </div>
-</body>
+</footer>>
 
 </html>
