--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE>
 <html>
 <head>
-  <title>Contact Form</title>
+  <title>Message me</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css"></link> 
 </head>
   <h1>Contact Form</h1>
 
@@ -68,5 +70,7 @@
   </form>
 
   <img src="/580b57fbd9996e24bc43bb93.png"></img>
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
