--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="eng">   
-<head >
-    <link rel="stylesheet" href="styles.css"></link> 
+<head>
     <title> GetElementById.RachelsPortfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css"></link> 
 </head>
 
 <body>
@@ -15,16 +16,12 @@
         <h2 class="aboutMe-title">
             About me
         </h2>
+        <img class ="headshot" src="/headshot.jpg">
         <p class="aboutMe">
-            Highly motivated and results-driven individual with a background in retail, 
-            now transitioning into the Web Development field. 
-            A quick learner with a strong work ethic, 
-            I am excited to implement the technical skills I have learned with Code Louisville. 
-            My experience with communication, customer satisfaction, 
-            and comfortability to work under pressure lends itself to creating innovative and impactful projects.
+            Creative Frontend Developer // UX/UI Designer with a bacground in Graphic Design
         </p>
         <p class="aboutMe">
-            >>elaborate>>[Passionate about user experience.]"<<"elaborate<<
+           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, ut!
         </p>
     </div>
 </div>
@@ -54,10 +51,14 @@
     <h3 class="more-title">
         Want more?
     </h3>
-    <a href="www.github.com/rach0c0" class="more"> Github</a> 
-    <a href="www.linkedin.com/in/racheloco" class="more">LinkedIn</a>
-    <a href="/contact.html" class="contact">Message me</a>
+    <div class="row">
+        <a href="www.github.com/rach0c0" class="more col-2 border m-1 text-center"> Github</a> 
+        <a href="www.linkedin.com/in/racheloco" class="more col-2 border m-1 text-center">LinkedIn</a>
+        <a href="/contact.html" class="more col-2 border m-1 text-center">Message me</a>
+    </div>
 </div>
-</footer>>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </html>
