--- a/index.html
+++ b/index.html
@@ -7,42 +7,42 @@
 </head>
 
 <body>
-<h1 class="name">
-    Rachel OConnell
-</h1>
-<div class="content">
-<div class="aboutMe-container">
-    <div class="aboutMe-content">
-        <h2 class="aboutMe-title">
-            About me
-        </h2>
-        <img class ="headshot" src="/headshot.jpg">
-        <p class="aboutMe">
-            Creative Frontend Developer // UX/UI Designer with a bacground in Graphic Design
-        </p>
-        <p class="aboutMe">
-           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi, ut!
-        </p>
-    </div>
+    <img class ="headshot" src="/headshot.jpg">
+
+<div class="name-container">
+    <h1 class="name">
+        Rachel O'Connell</h1>
 </div>
 
-<div class="projects-container">
-    <h2 class="projects-title">
-        Projects
-    </h2>
-    <div class="projects-content">
-        <p class="project">
-            Fur Covered Home
-        </p>
-        <a href="http://rach0c0.github.io/Fur-Covered-Home" class="showOff">[insert image ]</a>
+<div class="content">
+    <div class="aboutMe-container">
+        <div class="aboutMe-content">
+            <h2 class="aboutMe-title">
+            About me</h2>
+            <h5 class="aboutMe">
+            Creative Frontend Developer //<br> UX/UI Designer with a bacground in Graphic Design</h5>
+            <br><br>
+            <p class="aboutMe">
+                Hi! I am a self driven individual with a Bachelor's degree in Computer Graphics Technology, a Web Development certification from Code Louisville, and (soon) a Frontend Development certification for Onecode Camp.</p>
+                <br>
+            <p> Proficient in: HTML, CSS, bootstrap, JavaScript and React.</p>
+        </div>
     </div>
-    <div class="projects-content">
-        <p class="project">
-            Linage of Westeros
-        </p>
-            <a href="https://rach0c0.github.io/Lineage-of-Westeros" class="showOff">[insert image]</a>
+
+    <div class="projects-container">
+        <h2 class="projects-title">
+        Projects</h2>
+        <div class="projects-content">
+            <h4 class="project">
+            Fur Covered Home</h4>
+            <a href="http://rach0c0.github.io/Fur-Covered-Home" class="project-link"><img class="thumbnail" src="thumbnail1.png"></a>
+        </div>
+        <div class="projects-content">
+            <h4 class="project">
+            Linage of Westeros</h4>
+            <a href="https://rach0c0.github.io/Lineage-of-Westeros" class="project-link"><img class="thumbnail" src="thumbnail2.png"></a>
+        </div>
     </div>
-</div>
 </div>
 </body>
 
