newest links added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Creative Frontend Developer //<br> UX/UI Designer with a bacground in Graphic Design</h5>
             <br><br>
             <p class="aboutMe">
-                Hi! I am a self driven individual with a Bachelor's degree in Computer Graphics Technology, a Web Development certification from Code Louisville, and (soon) a Frontend Development certification for Onecode Camp.</p>
+                Hi! I am a self driven individual with a Bachelor's degree in Computer Graphics Technology, a Web Development certification from Code Louisville, and a Frontend Development certification for Onecode Camp.</p>
                 <br>
             <p> Proficient in: HTML, CSS, bootstrap, JavaScript and React.</p>
         </div>
@@ -35,12 +35,12 @@
         <div class="projects-content">
             <h4 class="project">
             Fur Covered Home</h4>
-            <a href="http://rach0c0.github.io/Fur-Covered-Home" class="project-link"><img class="thumbnail" src="thumbnail1.png"></a>
+            <a href="https://fur-covered-home.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail1.png"></a>
         </div>
         <div class="projects-content">
             <h4 class="project">
             Linage of Westeros</h4>
-            <a href="https://rach0c0.github.io/Lineage-of-Westeros" class="project-link"><img class="thumbnail" src="thumbnail2.png"></a>
+            <a href="https://linage-of-westeros.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail2.png"></a>
         </div>
     </div>
 </div>
