Update About Me

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div class="aboutMe-container">
         <div class="aboutMe-content">
             <h2 class="aboutMe-title">
-            About me</h2>
+            About Me</h2>
             <h5 class="aboutMe">
-            Creative Frontend Developer //<br> UX/UI Designer with a bacground in Graphic Design</h5>
+            Creative Frontend Developer //<br> UX/UI Designer with a background in Graphic Design</h5>
             <br><br>
             <p class="aboutMe">
-                Hi! I am a self driven individual with a Bachelor's degree in Computer Graphics Technology, a Web Development certification from Code Louisville, and a Frontend Development certification for Onecode Camp.</p>
+                Hi! I am a self driven individual with a Bachelor's degree in Computer Graphics Technology, a Web Development certification from Code Louisville, and a Frontend Development certification from Onecode Camp.</p>
                 <br>
-            <p> Proficient in: HTML, CSS, bootstrap, JavaScript and React.</p>
+            <p> Proficient in: HTML, CSS, Bootstrap, JavaScript, ReactJS, and Git.</p>
         </div>
     </div>
 
