--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </div>
 
     <div class="projects-container">
-        <h2 class="projects-title">
-        Projects</h2>
         <div class="projects-content">
+        <h2 class="projects-title">
+        Projects</h2>    <br>
             <h4 class="project">
             Fur Covered Home</h4>
             <a href="https://fur-covered-home.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail1.png"></a>
