--- a/index.html
+++ b/index.html
@@ -44,20 +44,22 @@
         </div>
     </div>
 </div>
-</body>
 
-<footer>
-<div class="more-container">
-    <h3 class="more-title">
-        Want more?
-    </h3>
-    <div class="row">
-        <a href="www.github.com/rach0c0" class="more col-2 border m-1 text-center"> Github</a> 
-        <a href="www.linkedin.com/in/racheloco" class="more col-2 border m-1 text-center">LinkedIn</a>
-        <a href="/contact.html" class="more col-2 border m-1 text-center">Message me</a>
-    </div>
-</div>
-</footer>
+
+    <section class="footer">
+        <footer class="more-container">
+            <h3 class="more-title">
+                Want more?
+            </h3>
+            <div class="row">
+                <a href="www.github.com/rach0c0" class="more col-2 border m-1 text-center"> Github</a> 
+                <a href="www.linkedin.com/in/racheloco" class="more col-2 border m-1 text-center">LinkedIn</a>
+                <a href="/contact.html" class="more col-2 border m-1 text-center">Message me</a>
+            </div>
+        </footer>
+    </section>
+
+</body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
