--- a/index.html
+++ b/index.html
@@ -7,59 +7,74 @@
 </head>
 
 <body>
-    <img class ="headshot" src="/headshot.jpg">
-
-<div class="name-container">
-    <h1 class="name">
-        Rachel O'Connell</h1>
-</div>
-
-<div class="content">
-    <div class="aboutMe-container">
-        <div class="aboutMe-content">
-            <h2 class="aboutMe-title">
-            About Me</h2>
-            <h5 class="aboutMe">
-            Creative Frontend Developer //<br> UX/UI Designer with a background in Graphic Design</h5>
-            <br><br>
-            <p class="aboutMe">
-                Hi! I am a self driven individual with a Bachelor's degree in Computer Graphics Technology, a Web Development certification from Code Louisville, and a Frontend Development certification from Onecode Camp.</p>
-                <br>
-            <p> Proficient in: HTML, CSS, Bootstrap, JavaScript, ReactJS, and Git.</p>
-        </div>
-    </div>
-
-    <div class="projects-container">
-        <div class="projects-content">
-        <h2 class="projects-title">
-        Projects</h2>    <br>
-            <h4 class="project">
-            Fur Covered Home</h4>
-            <a href="https://fur-covered-home.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail1.png"></a>
-        </div>
-        <div class="projects-content">
-            <h4 class="project">
-            Linage of Westeros</h4>
-            <a href="https://linage-of-westeros.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail2.png"></a>
-        </div>
-    </div>
-</div>
-
-
-    <section class="footer">
-        <footer class="more-container">
-            <h3 class="more-title">
-                Want more?
-            </h3>
-            <div class="row">
-                <a href="www.github.com/rach0c0" class="more col-2 border m-1 text-center"> Github</a> 
-                <a href="www.linkedin.com/in/racheloco" class="more col-2 border m-1 text-center">LinkedIn</a>
-                <a href="/contact.html" class="more col-2 border m-1 text-center">Message me</a>
+    <div class="row h-150">
+        <div class="col">
+            <div class="row h-100">
+                <div class="col-5">
+                    <div class="row h-50">
+                        <div class="col text-center align-self-center">
+                            <a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="placeholder.jpg"></a>
+                        </div>
+                    </div>
+                    <div class="row h-50">
+                        <div class="col">
+                            <img class ="headshot" src="/headshot.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-7 text-end align-self-center aboutMe-frame">
+                    <img class="aboutMe" src="placeholder.jpg">
+                </div>
             </div>
-        </footer>
-    </section>
+            <div class="row">
+                <div class="col text-center skillList-container">
+                    <p class="skillList">Coding Languages: HTML, CSS, JavaScript, ReactJS, Node.js, Git, bootstrap</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="row">
+                <div class="col-4"><br/></div>
+                <div class="col-8 text-center">
+                    <p class="name">Rachel OConnell</p>
+                </div>
+            </div>
+            <div class="row h-100">
+                <div class="col">
+                    <div class="row h-50">
+                        <div class="col">
+                            <a href="https://fur-covered-home.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail1.png"></a>
+                        </div>
+                    </div>
+                    <div class="row h-50">
+                        <div class="col">
+                            <a href="www.github.com/rach0c0"><img class="classyImage" src="placeholder.jpg"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row h-50">
+                        <div class="col align-self-center">
+                            <a href="https://louisville-vegan.netlify.app/" class="project-link"><img class="thumbnail2" src="thumbnail3.png"></a>
+                        </div>
+                    </div>
+                    <div class="row h-50">
+                        <div class="col align-self-center">
+                            <a href="https://linage-of-westeros.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail2.png"></a>
+                        </div>
+                    </div>
 
+                </div> 
+            </div>
+        </div>
+    </div>
+   <!-- 
+    <section class="baseboard">
+        <footer><br/><br/><br/></footer>
+    </section> -->
 </body>
+<!--
+<footer><br/><br/><br/><div class="closeNote"><p>site by Rachel OConnell</p></div></footer> -->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
