--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
                 <div class="col-5">
                     <div class="row h-50">
                         <div class="col text-center align-self-center">
-                            <a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="placeholder.jpg"></a>
+                            <div class="classyImage-frame"><a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="placeholder.jpg"></a></div>
                         </div>
                     </div>
                     <div class="row h-50">
                         <div class="col">
-                            <img class ="headshot" src="/headshot.jpg">
+                        <div class="headshot-frame">
+                            <img class ="headshot" src="/headshot.jpg"></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-7 text-end align-self-center aboutMe-frame">
-                    <img class="aboutMe" src="placeholder.jpg">
+                <div class="col-7 text-end align-self-center">
+                <div class="aboutMe-frame">
+                    <img class="aboutMe" src="placeholder.jpg"></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col text-center skillList-container">
-                    <p class="skillList">Coding Languages: HTML, CSS, JavaScript, ReactJS, Node.js, Git, bootstrap</p>
+                    <h5 class="skillList"><em>Coding Languages: HTML, CSS, JavaScript, ReactJS, Node.js, Git, bootstrap</em></h5>
                 </div>
             </div>
         </div>
@@ -43,24 +45,25 @@
                 <div class="col">
                     <div class="row h-50">
                         <div class="col">
-                            <a href="https://fur-covered-home.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail1.png"></a>
+                            <div class="thumbnail1-frame">
+                            <a href="https://fur-covered-home.netlify.app/"><img class="thumbnail1" src="thumbnail1.png"></a></div>
                         </div>
                     </div>
                     <div class="row h-50">
                         <div class="col">
-                            <a href="www.github.com/rach0c0"><img class="classyImage" src="placeholder.jpg"></a>
+                            <div class="classyImage-frame"><a href="www.github.com/rach0c0"><img class="classyImage" src="placeholder.jpg"></a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="row h-50">
                         <div class="col align-self-center">
-                            <a href="https://louisville-vegan.netlify.app/" class="project-link"><img class="thumbnail2" src="thumbnail3.png"></a>
+                            <div class="thumbnail2-frame"><a href="https://louisville-vegan.netlify.app/"><img class="thumbnail2" src="thumbnail3.png"></a></div>
                         </div>
                     </div>
                     <div class="row h-50">
                         <div class="col align-self-center">
-                            <a href="https://linage-of-westeros.netlify.app/" class="project-link"><img class="thumbnail" src="thumbnail2.png"></a>
+                            <div class="thumbnail1-frame"><a href="https://linage-of-westeros.netlify.app/"><img class="thumbnail1" src="thumbnail2.png"></a></div>
                         </div>
                     </div>
 
