adjust file paths

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
                 <div class="col-5">
                     <div class="row h-50">
                         <div class="col text-center align-self-center">
-                            <div class="classyImage-frame"><a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="placeholder.jpg"></a></div>
+                            <div class="classyImage-frame"><a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="images/placeholder.jpg"></a></div>
                         </div>
                     </div>
                     <div class="row h-50">
                         <div class="col">
                         <div class="headshot-frame">
-                            <img class ="headshot" src="/headshot.jpg"></div>
+                            <img class ="headshot" src="images/headshot.jpg"></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-7 text-end align-self-center">
                 <div class="aboutMe-frame">
-                    <img class="aboutMe" src="placeholder.jpg"></div>
+                    <img class="aboutMe" src="images/placeholder.jpg"></div>
                 </div>
             </div>
             <div class="row">
@@ -46,24 +46,24 @@
                     <div class="row h-50">
                         <div class="col">
                             <div class="thumbnail1-frame">
-                            <a href="https://fur-covered-home.netlify.app/"><img class="thumbnail1" src="thumbnail1.png"></a></div>
+                            <a href="https://fur-covered-home.netlify.app/"><img class="thumbnail1" src="images/thumbnail1.png"></a></div>
                         </div>
                     </div>
                     <div class="row h-50">
                         <div class="col">
-                            <div class="classyImage-frame"><a href="www.github.com/rach0c0"><img class="classyImage" src="placeholder.jpg"></a></div>
+                            <div class="classyImage-frame"><a href="www.github.com/rach0c0"><img class="classyImage" src="images/placeholder.jpg"></a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="row h-50">
                         <div class="col align-self-center">
-                            <div class="thumbnail2-frame"><a href="https://louisville-vegan.netlify.app/"><img class="thumbnail2" src="thumbnail3.png"></a></div>
+                            <div class="thumbnail2-frame"><a href="https://louisville-vegan.netlify.app/"><img class="thumbnail2" src="images/thumbnail3.png"></a></div>
                         </div>
                     </div>
                     <div class="row h-50">
                         <div class="col align-self-center">
-                            <div class="thumbnail1-frame"><a href="https://linage-of-westeros.netlify.app/"><img class="thumbnail1" src="thumbnail2.png"></a></div>
+                            <div class="thumbnail1-frame"><a href="https://linage-of-westeros.netlify.app/"><img class="thumbnail1" src="images/thumbnail2.png"></a></div>
                         </div>
                     </div>
 
