fine-tunw arrangement

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
 <body>
     <div class="row h-150">
-        <div class="col">
+        <div class="col align-self-center">
             <div class="row h-100">
-                <div class="col-5">
+                <div class="col-5 align-self-center">
                     <div class="row h-50">
                         <div class="col text-center align-self-center">
-                            <div class="classyImage-frame"><a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="images/placeholder.jpg"></a></div>
+                            <div class="classyImage-frame"><a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="images/in-icon.png"></a></div>
                         </div>
                     </div>
                     <div class="row h-50">
-                        <div class="col">
+                        <div class="col align-self-center">
                         <div class="headshot-frame">
                             <img class ="headshot" src="images/headshot.jpg"></div>
                         </div>
@@ -30,11 +30,11 @@
             </div>
             <div class="row">
                 <div class="col text-center skillList-container">
-                    <h5 class="skillList"><em>Coding Languages: HTML, CSS, JavaScript, ReactJS, Node.js, Git, bootstrap</em></h5>
+                    <h5 class="skillList"><em>Programming Proficiencies: HTML, CSS, Bootstrap, JavaScript, ReactJS, NodeJS, Git</em></h5>
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col align-self-center">
             <div class="row">
                 <div class="col-4"><br/></div>
                 <div class="col-8 text-center">
@@ -42,22 +42,23 @@
                 </div>
             </div>
             <div class="row h-100">
-                <div class="col">
+                <div class="col align-self-start">
                     <div class="row h-50">
-                        <div class="col">
+                        <div class="col align-self-end">
+                            <p class="linkName">fur-covered-home</p>
                             <div class="thumbnail1-frame">
                             <a href="https://fur-covered-home.netlify.app/"><img class="thumbnail1" src="images/thumbnail1.png"></a></div>
                         </div>
                     </div>
                     <div class="row h-50">
-                        <div class="col">
-                            <div class="classyImage-frame"><a href="www.github.com/rach0c0"><img class="classyImage" src="images/placeholder.jpg"></a></div>
+                        <div class="col align-self-center">
+                            <div class="classyImage-frame"><a href="www.github.com/rach0c0"><img class="classyImage" src="images/gh-icon.png"></a></div>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col align-self-end">
                     <div class="row h-50">
-                        <div class="col align-self-center">
+                        <div class="col align-self-end">
                             <div class="thumbnail2-frame"><a href="https://louisville-vegan.netlify.app/"><img class="thumbnail2" src="images/thumbnail3.png"></a></div>
                         </div>
                     </div>
