--- a/index.html
+++ b/index.html
@@ -7,62 +7,64 @@
 </head>
 
 <body>
-    <div class="row h-150">
-        <div class="col align-self-center">
-            <div class="row h-100">
+    <div class="row">
+        <div class="col-6 align-self-center">
+            <div class="row">
                 <div class="col-5 align-self-center">
-                    <div class="row h-50">
-                        <div class="col text-center align-self-center">
-                            <div class="classyImage-frame"><a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="images/in-icon.png"></a></div>
-                        </div>
+                    <div class="row text-center align-self-center">
+                        <div class="classyImage-frame"><a href="www.linkedin.com/in/racheloco"><img class="classyImage" src="images/in-icon.png"></a></div>
                     </div>
-                    <div class="row h-50">
-                        <div class="col align-self-center">
+                    <div class="row align-self-center">
                         <div class="headshot-frame">
                             <img class ="headshot" src="images/headshot.jpg"></div>
-                        </div>
                     </div>
                 </div>
-                <div class="col-7 text-end align-self-center">
-                <div class="aboutMe-frame">
-                    <img class="aboutMe" src="images/placeholder.jpg"></div>
+            <div class="col-7 text-end align-self-center">
+                <div class="aboutMe-frame align-self-center">
+                    <div class="aboutMe">
+                        <p class="aboutT text-start">I am a passionate Web Developer with a background in Graphic Design and Front-End Development. With a keen eye for design and a strong foundation in HTML, CSS, JavaScript, and React, I specialize in building engaging, user-friendly web applications.</p>
+                        <p class="aboutT text-start">My journey into web development was fueled by my love for problem-solving and creativity. Through projects like Lineage of Westeros and Fur Covered Home, I’ve honed my skills in UI/UX design, API integration, and responsive development.</p>
+                        <p class="aboutT text-start">Beyond coding, my experience in retail and banking has sharpened my ability to collaborate, communicate, and think critically under pressure. These skills translate seamlessly into web development. I am always eager to learn, adapt, and push the boundaries of digital experiences.</p>
+                    </div> 
+                <!--     <img class="aboutMe" src="images/placeholder.jpg"></div> -->
                 </div>
             </div>
             <div class="row">
                 <div class="col text-center skillList-container">
-                    <h5 class="skillList"><em>Programming Proficiencies: HTML, CSS, Bootstrap, JavaScript, ReactJS, NodeJS, Git</em></h5>
+                    <h5 class="skillList"><em>Programming Proficiencies: HTML, CSS, Bootstrap, <br/>JavaScript, ReactJS, RestAPI, NodeJS, Git</em></h5>
                 </div>
             </div>
         </div>
-        <div class="col align-self-center">
+    </div>
+        <div class="col-6 align-self-start">
             <div class="row">
                 <div class="col-4"><br/></div>
                 <div class="col-8 text-center">
                     <p class="name">Rachel OConnell</p>
                 </div>
             </div>
-            <div class="row h-100">
-                <div class="col align-self-start">
-                    <div class="row h-50">
-                        <div class="col align-self-end">
-                            <p class="linkName">fur-covered-home</p>
+            <div class="row">
+                <div class="col-6 align-self-start">
+                    <div class="row-5">
+                    <!--    <div class="col align-self-end text-center"> -->
+                            <p class="linkName"></p>
                             <div class="thumbnail1-frame">
                             <a href="https://fur-covered-home.netlify.app/"><img class="thumbnail1" src="images/thumbnail1.png"></a></div>
-                        </div>
+                    <!--    </div> -->
                     </div>
-                    <div class="row h-50">
+                    <div class="row">
                         <div class="col align-self-center">
                             <div class="classyImage-frame"><a href="www.github.com/rach0c0"><img class="classyImage" src="images/gh-icon.png"></a></div>
                         </div>
                     </div>
                 </div>
-                <div class="col align-self-end">
-                    <div class="row h-50">
+                <div class="col-6 align-self-end">
+                    <div class="row">
                         <div class="col align-self-end">
                             <div class="thumbnail2-frame"><a href="https://louisville-vegan.netlify.app/"><img class="thumbnail2" src="images/thumbnail3.png"></a></div>
                         </div>
                     </div>
-                    <div class="row h-50">
+                    <div class="row">
                         <div class="col align-self-center">
                             <div class="thumbnail1-frame"><a href="https://linage-of-westeros.netlify.app/"><img class="thumbnail1" src="images/thumbnail2.png"></a></div>
                         </div>
